added Dispatch CRUD logic, controller, service, dto, unit tests, request validator. temporary security config to bypass.